--- a/src/contents/styles.module.css
+++ b/src/contents/styles.module.css
@@ -2,18 +2,13 @@
   display: flex;
   background-color: #eeeee1;
   color: #232323;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-  padding: 1rem 2rem;
-  gap: 0.2rem;
+  padding: .5em 1.5em;
   position: absolute;
   top: 0;
   left: 0;
   display: none;
   width: max-content;
-  border-radius: 1rem;
+  border-radius: 1em;
   box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.25);
   font-family: "Inter", sans-serif;
 }
@@ -24,8 +19,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 0 0.2rem;
-  gap: 0.2rem;
+  padding: 0 0.2em;
+  gap: 0.2em;
 }
 
 .highlightBoxInner img {
@@ -39,17 +34,18 @@
 .highlightBox p {
   margin: 0;
   font-weight: normal;
+  text-align: center;
 }
 
 .highlightBoxInner h2 {
-  padding: 0 0.5rem;
-  font-size: 1.2rem;
+  padding: 0 0.5em;
+  font-size: 1.2em;
   font-family: "Lora", serif;
 }
 
 .highlightBox p {
-  padding: 0 0.5rem;
-  font-size: 0.8rem;
+  padding: 0 0.5em;
+  font-size: 0.8em;
 }
 
 .currencySelector {
@@ -67,7 +63,7 @@
   display: block;
   border-radius: 30px;
   border: none;
-  padding: 0.2rem;
+  padding: 0.2em;
   position: absolute;
   bottom: 0;
   right: 0;
