--- a/src/contents/styles.module.css
+++ b/src/contents/styles.module.css
@@ -2,7 +2,7 @@
   display: flex;
   background-color: #eeeee1;
   color: #232323;
-  padding: .5em 1.5em;
+  padding: 0.5em 1.5em;
   position: absolute;
   top: 0;
   left: 0;
@@ -21,13 +21,6 @@
   width: 100%;
   padding: 0 0.2em;
   gap: 0.2em;
-}
-
-.highlightBoxInner img {
-  border-radius: 100px;
-  width: 30px;
-  height: 30px;
-  box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.25);
 }
 
 .highlightBox h2,
@@ -50,6 +43,14 @@
 
 .currencySelector {
   position: relative;
+}
+
+.currencySelector img, .currencyCombobox img {
+  border-radius: 100px;
+  width: 30px;
+  height: 30px;
+  box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.25);
+  display: block;
 }
 
 .expandButton {
@@ -79,6 +80,13 @@
   width: 100%;
   height: 100%;
 }
+.currencyComboboxContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
 .currencyCombobox * {
   box-sizing: border-box;
 }
@@ -99,19 +107,15 @@
   --grayA3: hsla(0, 0%, 0%, 0.047);
 
   transition: width 1s ease;
-  max-width: 500px;
+  max-width: min(500px, 90vw);
   width: max-content;
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  transform: translate(-50%, 10px);
 }
 
-.currencyCombobox .currencyItem{
+.currencyCombobox .currencyItem {
   display: flex;
   align-items: center;
   gap: 8px;
-
+  width: 100%;
 }
 
 .currencyCombobox [cmdk-root] {
