--- a/src/popup/popupStyle.css
+++ b/src/popup/popupStyle.css
@@ -5,17 +5,23 @@
   box-sizing: border-box;
 }
 html {
-  width: 343px;
-  height: 369px;
   background-color: #eeeee1;
 }
 
 html,
-body {
+body,
+#__plasmo {
   margin: 0;
   padding: 0;
   font-family: "Lora", serif;
+
+  width: 343px;
+  min-height: 369px;
+  max-height: 500px;
+  overflow-y: auto;
 }
+
+
 h3,
 h4,
 h5,
@@ -109,41 +115,40 @@ h6 {
   font-style: italic;
 }
 
-.currencyInputContainer{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    background-color: #F6F6E5;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    padding: .7rem 0;
+.currencyInputContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  background-color: #f6f6e5;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  padding: 0.7rem 0;
 }
 
-
-section{
-    width: 90%;
-    margin: 1rem auto;
-    background-color: #E5E5CE;
-    padding: .5rem 1rem;
-    border-radius: 15px;
+section {
+  width: 90%;
+  margin: 1rem auto;
+  background-color: #e5e5ce;
+  padding: 0.5rem 1rem;
+  border-radius: 15px;
 }
 
-section .section-header{
-    text-align: center;
+section .section-header {
+  text-align: center;
 }
 
 .flip-currency-button {
   width: 2.5rem;
   height: 2.5rem;
-  padding: .5rem; 
+  padding: 0.5rem;
   position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%);
-  margin: -.5rem 0;
+  margin: -0.5rem 0;
   border-radius: 2.5rem;
   background-color: #232323;
   border: none;
@@ -151,14 +156,83 @@ section .section-header{
   cursor: pointer;
 }
 
-.flip-currency-button:hover{
+.flip-currency-button:hover {
   background-color: #333333;
 }
 
-.flip-currency-button svg{
+.flip-currency-button svg {
   width: 100%;
 }
 
-.currencyInputArea{
+.currencyInputArea {
   margin: 1rem 0;
+}
+
+.historyItem {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  background-color: #F6F6E5;
+  border-radius: 10px;
+  margin: 0.5rem 0;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.conversionInfo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.conversionInfo img {
+  border-radius: 100px;
+  width: 30px;
+  height: 30px;
+  display: block;
+  box-shadow: 0 2px 4px 1px #00000040;
+}
+
+.pageInfo{
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.pageInfo img{
+  height: 1.2rem;
+  width: 1.2rem;
+  border-radius: 1.2rem;
+}
+
+.pageInfo p{
+  margin: 0 0.2rem;
+  font-size: .8rem;
+  font-family: "Inter", sans-serif;
+  color: #737373;
+  text-decoration: none;
+}
+
+
+.noHistoryText{
+  text-align: center;
+  color: #737373;
+  font-size: 1rem;
+  font-family: "Inter", sans-serif;
+  font-size: 1.2rem;
+  margin: 1rem 0;
+}
+
+.historyItemContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  max-height: 160px;
+  overflow-y: auto;
 }
